namespaces/live.cloud-platform.service.justice.gov.uk/rd-ai-nexus-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "rd-ai-nexus-prod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "research_and_development"
    cloud-platform.justice.gov.uk/application: "AI Nexus"
    cloud-platform.justice.gov.uk/owner: "Research and Development: research-and-development@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/rd-ai-nexus"
    cloud-platform.justice.gov.uk/team-name: "research-and-development"
    cloud-platform.justice.gov.uk/review-after: "2025-01-03"
